<resources>
    <string name="app_name" translatable="false">Develhope Meteo App</string>

    <!-- Navigation Bar -->
    <string name="navbar_home">Home</string>
    <string name="navbar_today">Today</string>
    <string name="navbar_tomorrow">Tomorrow</string>
    <string name="navbar_search">Search</string>
    <!-- Home Screen -->
    <string name="tv_home_title">%s, %s</string>
    <string name="tv_next_five_days">Next 5 days</string>
    <!-- Today Screen -->
    <string name="tv_today">Today,</string>
    <!-- Recycler View Home Screen Items -->
    <string name="rv_tv_min_temp_card">%d°C</string>
    <string name="rv_tv_max_temp_card">%d°C</string>
    <string name="rv_tv_date">%d/%d</string>
    <string name="rv_tv_precip_percentage">%d mm</string>
    <string name="rv_tv_wind">%d km/h</string>
    <string name="rv_title">%s, %s</string>
    <string name="rv_next_5_days">%s</string>
    <string name="precip">precip.</string>
    <string name="wind">wind</string>
    <string name="error">error</string>

    <!-- Recycler View Today Screen Items -->
    <string name="rv_tv_hour">%d:00</string>
    <string name="rv_tv_day_month_date">%s, %d %s</string>
    <string name="cv_tv_today">Today</string>
    <string name="cv_tv_calendar_date">%d/%d/%d</string>
    <string name="rv_cv_humidity">%d%%</string>
    <string name="rv_cv_perceived">%d°C</string>
    <string name="rv_cv_coverage">%d%%</string>
    <string name="rv_cv_rain">%dmm</string>
    <string name="rv_cv_wind">%s %dKm/h</string>
    <string name="rv_cv_uv_index">5/10</string>
    <string name="date">%d-%d-%d</string>
    <!-- Static Title Search Page -->
    <string name="static_recent_search">Recent search</string>
    <!-- Error Page Static Text -->
    <string name="error_page_static_text">There was an error retrieving data. Check your internet connection and try again.</string>
    <string name="btn_try_again_error_page">Try again</string>
    <string name="btn_quit_app_error_page">X</string>
    <!-- Quit Dialog Text -->
    <string name="alert_dialog_message">Are you sure you want to exit?</string>
    <string name="alert_dialog_positive">ok</string>
    <string name="alert_dialog_negative">dismiss</string>
    <string name="title_dialog_quit">Exit</string>
    <string name="recent_city">%s, %s</string>
    <!-- Week -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

</resources>